Renamed parser and lexer due to name conflict with OCaml standard library.

--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,9 @@
 horsat2
 top
 horsat2-debug
-parser.ml
-lexer.ml
-parser.mli
-lexer.mli
+infSatParser.ml
+infSatParser.mli
+infSatLexer.ml
 TAGS
 *~
 *.o
